Add UAB themed buttons, labels, progress bars, and background classes

--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -154,3 +154,6 @@
 .progress-danger {
   @include progress-variant($progress-bar-danger-bg);
 }
+.progress-uab {
+  @include progress-variant($progress-bar-uab-bg);
+}
