--- a/scss/_labels.scss
+++ b/scss/_labels.scss
@@ -75,3 +75,7 @@ a.label {
 .label-danger {
   @include label-variant($label-danger-bg);
 }
+
+.label-uab {
+  @include label-variant($label-uab-bg);
+}
