--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -6,6 +6,7 @@
 
 // Core variables and mixins
 @import "variables";
+@import "uab-variables";
 @import "mixins";
 
 // Reset and dependencies
@@ -21,6 +22,7 @@
 @import "tables";
 @import "forms";
 @import "buttons";
+@import "uab-buttons";
 
 // Components
 @import "animation";
@@ -35,9 +37,11 @@
 @import "pagination";
 @import "pager";
 @import "labels";
+@import "uab-labels";
 @import "jumbotron";
 @import "alert";
 @import "progress";
+@import "uab-progress";
 @import "media";
 @import "list-group";
 @import "responsive-embed";
@@ -51,6 +55,8 @@
 
 // Utility classes
 @import "utilities";
+@import "uab-utilities";
 @import "utilities-background";
+@import "uab-utilities-background";
 @import "utilities-spacing";
 @import "utilities-responsive";
