Added UAB themed styles for navbars

--- a/scss/_uab-variables.scss
+++ b/scss/_uab-variables.scss
@@ -64,6 +64,68 @@ $btn-uab-blue-bg:                $brand-uab-blue !default;
 $btn-uab-blue-border:            $btn-uab-blue-bg !default;
 
 
+// Navbar
+
+$navbar-white-color:                        rgba(0,0,0,.6) !default;
+$navbar-white-hover-color:                  rgba(0,0,0,.8) !default;
+$navbar-white-active-color:                 rgba(0,0,0,1) !default;
+$navbar-white-disabled-color:               rgba(0,0,0,.3) !default;
+
+$navbar-uab-links-color:                    rgba($brand-uab,.5) !default;
+$navbar-uab-links-hover-color:              rgba($brand-uab,.75) !default;
+$navbar-uab-links-active-color:             rgba($brand-uab,1) !default;
+$navbar-uab-links-disabled-color:           rgba($brand-uab,.25) !default;
+
+$navbar-uab-green-1-links-color:            rgba($brand-uab-green-1,.5) !default;
+$navbar-uab-green-1-links-hover-color:      rgba($brand-uab-green-1,.75) !default;
+$navbar-uab-green-1-links-active-color:     rgba($brand-uab-green-1,1) !default;
+$navbar-uab-green-1-links-disabled-color:   rgba($brand-uab-green-1,.25) !default;
+
+$navbar-uab-green-2-links-color:            rgba($brand-uab-green-2,.5) !default;
+$navbar-uab-green-2-links-hover-color:      rgba($brand-uab-green-2,.75) !default;
+$navbar-uab-green-2-links-active-color:     rgba($brand-uab-green-2,1) !default;
+$navbar-uab-green-2-links-disabled-color:   rgba($brand-uab-green-2,.25) !default;
+
+$navbar-uab-green-3-links-color:            rgba($brand-uab-green-3,.5) !default;
+$navbar-uab-green-3-links-hover-color:      rgba($brand-uab-green-3,.75) !default;
+$navbar-uab-green-3-links-active-color:     rgba($brand-uab-green-3,1) !default;
+$navbar-uab-green-3-links-disabled-color:   rgba($brand-uab-green-3,.25) !default;
+
+$navbar-uab-gold-1-links-color:             rgba($brand-uab-gold-1,.5) !default;
+$navbar-uab-gold-1-links-hover-color:       rgba($brand-uab-gold-1,.75) !default;
+$navbar-uab-gold-1-links-active-color:      rgba($brand-uab-gold-1,1) !default;
+$navbar-uab-gold-1-links-disabled-color:    rgba($brand-uab-gold-1,.25) !default;
+
+$navbar-uab-gold-2-links-color:             rgba($brand-uab-gold-2,.5) !default;
+$navbar-uab-gold-2-links-hover-color:       rgba($brand-uab-gold-2,.75) !default;
+$navbar-uab-gold-2-links-active-color:      rgba($brand-uab-gold-2,1) !default;
+$navbar-uab-gold-2-links-disabled-color:    rgba($brand-uab-gold-2,.25) !default;
+
+$navbar-uab-beige-links-color:              rgba($brand-uab-beige,.5) !default;
+$navbar-uab-beige-links-hover-color:        rgba($brand-uab-beige,.75) !default;
+$navbar-uab-beige-links-active-color:       rgba($brand-uab-beige,1) !default;
+$navbar-uab-beige-links-disabled-color:     rgba($brand-uab-beige,.25) !default;
+
+$navbar-uab-red-links-color:                rgba($brand-uab-red,.5) !default;
+$navbar-uab-red-links-hover-color:          rgba($brand-uab-red,.75) !default;
+$navbar-uab-red-links-active-color:         rgba($brand-uab-red,1) !default;
+$navbar-uab-red-links-disabled-color:       rgba($brand-uab-red,.25) !default;
+
+$navbar-uab-brown-links-color:              rgba($brand-uab-brown,.5) !default;
+$navbar-uab-brown-links-hover-color:        rgba($brand-uab-brown,.75) !default;
+$navbar-uab-brown-links-active-color:       rgba($brand-uab-brown,1) !default;
+$navbar-uab-brown-links-disabled-color:     rgba($brand-uab-brown,.25) !default;
+
+$navbar-uab-purple-links-color:             rgba($brand-uab-purple,.5) !default;
+$navbar-uab-purple-links-hover-color:       rgba($brand-uab-purple,.75) !default;
+$navbar-uab-purple-links-active-color:      rgba($brand-uab-purple,1) !default;
+$navbar-uab-purple-links-disabled-color:    rgba($brand-uab-purple,.25) !default;
+
+$navbar-uab-blue-links-color:               rgba($brand-uab-blue,.5) !default;
+$navbar-uab-blue-links-hover-color:         rgba($brand-uab-blue,.75) !default;
+$navbar-uab-blue-links-active-color:        rgba($brand-uab-blue,1) !default;
+$navbar-uab-blue-links-disabled-color:      rgba($brand-uab-blue,.25) !default;
+
 // Labels
 
 $label-uab-bg:                $brand-uab !default;
