--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -32,6 +32,7 @@
 @import "custom-forms";
 @import "nav";
 @import "navbar";
+@import "uab-navbar";
 @import "card";
 @import "breadcrumb";
 @import "pagination";
