Removed the UAB medicine color

--- a/scss/_uab-variables.scss
+++ b/scss/_uab-variables.scss
@@ -2,7 +2,7 @@
 //
 // Grayscale and brand colors for use across Bootstrap.
 
-$brand-uab:                 #006d47 !default;
+$brand-uab:                 #1e6b52 !default;
 $brand-uab-green-1:         #1e6b52 !default;
 $brand-uab-green-2:         #a3d55d !default;
 $brand-uab-green-3:         #92aba0 !default;
